<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="VisionFrame" Id="{44745909-06fc-4402-bdc9-73c8087a9c0d}">
    <Declaration><![CDATA[TYPE VisionFrame :
STRUCT
	MaterialID : STRING;
	CheckFor : STRING;
	CameraNumber : DINT;
	
	SuccessFlag : DINT;
	OrientAdjustX : LREAL;
	OrientAdjustY : LREAL;
	OrientAdjustZ : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>